--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "ansi-to-html": "^0.7.2",
+    "matter-js": "^0.19.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
     "react": "^18.2.0",
